Refactored pax exam tests